# rust-web

./: Cargo.toml  Rocket.toml
src/: main.rs
src/application/services/system/: user_service.rs
src/catchers/: auth_catcher.rs  mod.rs
src/controllers/auth_controllers/: auth_controller.rs
src/domain/entities/system/: login.rs  user.rs
src/domain/repositories/system/: user_repository.rs
src/guards/: admin_guard.rs  auth_guard.rs  mod.rs
src/infrastructure/: mod.rs  unit_of_work.rs
src/infrastructure/database/: connection.rs
src/infrastructure/repositories/system/: user_repository_impl.rs
src/infrastructure/unit_of_work/: mod.rs  unit_of_work.rs
src/interfaces/: mod.rs
src/interfaces/controllers/: mod.rs
src/interfaces/controllers/auth_controllers/: auth_controller.rs
src/interfaces/guards/: admin_guard.rs  auth_guard.rs
src/interfaces/routes/: mod.rs
src/interfaces/routes/admin/: admin.rs
src/interfaces/routes/auth/: auth.rs  mod.rs
src/interfaces/routes/public/: landing.rs
src/models/auth_models/: login_form.rs
src/routes/: home.rs  mod.rs
src/routes/admin/: admin.rs  mod.rs
src/routes/auth/: auth.rs
src/routes/public/: mod.rs
templates/auth/: login.html.tera
templates/demo/: body.html.tera  footer.html.tera  header.html.tera  sidebar.html.tera
views/auth/: login.html.tera
views/components/: breadcrumb.html.tera
views/demo/: breadcrumb.html.tera
views/errors/: 401.html.tera  403.html.tera
views/layout/: main_layout.html.tera
views/public/: index.html.tera
