[package]
name = "rust-web"
version = "0.1.0"
edition = "2024"


[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1", features = ["derive"] }


tiberius = { version = "0.12", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

serde_json = "1"
async-trait = "0.1"